--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
 								<header class="major">
 									<h2>About Me <br />
 									And My Projects</h2>
-									<p>Am a BCA student, My projects Include a Chat Appplication and a Mbile Placement Application,
-										Languages that I know include: C, C++, Java, PHP, HTML, Kotlin, CSS </p>
+									<p>BCA student <br/>Known Languages: C, C++, Java, PHP, HTML, Kotlin, CSS </p>
 								</header>
 								<a href="#" class="image main"><img src="images/main Image.jpg" alt="" /></a>
 							</article>
