--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								<header class="major">
 									<h2>About Me <br />
 									And My Projects</h2>
-									<p>BCA student <br/>Known Languages: C, C++, Java, PHP, HTML, Kotlin, CSS </p>
+									<p>BCA student <br/> </p>
 								</header>
 								<a href="#" class="image main"><img src="images/main Image.jpg" alt="" /></a>
 							</article>
