--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								<article>
 									<header>
 										<h2>Chat Application<br />
-										Using PHP, MySQL</h2>
+										Using PHP and MySQL</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/chat app.png" alt="" /></a>
 									<p>Chat Application is a simple and easy to use public Chat application. Developed using PHP and MySQL.</p>
