--- a/index.html
+++ b/index.html
@@ -74,6 +74,28 @@
 										<li><a href="https://github.com/AxinJoseph?tab=repositories" class="button">View In Github</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										<h2>LetsChatApp<br />
+									Mobile App</h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/LetsChat.png" alt="" /></a>
+									<p>LetsChat is a mobile application developed using Kotlin in Android Studio. This is a simple chat application where users can create account and start chatting.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/AxinJoseph/LetsChatApp" class="button">View In Github</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>JustVideos<br />
+									Mobile App</h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/JustVideos.png" alt="" /></a>
+									<p>JustVideos is a mobile application developed using Kotlin in Android Studio. This is a simple app where users can upload videos and view them online.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/AxinJoseph/JustVideos" class="button">View In Github</a></li>
+									</ul>
+								</article>
 							</section>
 
 					</div>
